[gd_scene load_steps=18 format=3 uid="uid://c8poyqkcp3nl7"]

[ext_resource type="Script" path="res://Modules/DialogueComponent.gd" id="1_gfu0n"]
[ext_resource type="Script" path="res://Modules/NPC.gd" id="1_thhd0"]
[ext_resource type="PackedScene" uid="uid://dpkpxh578lq7e" path="res://Modules/Components/HealthComponent.tscn" id="2_emngx"]
[ext_resource type="Texture2D" uid="uid://j8sqwr1paj4j" path="res://assets/NPC/NPC-DEATH.png" id="2_l641h"]
[ext_resource type="Texture2D" uid="uid://bvv2jgw8fdnmm" path="res://assets/NPC/NPC-IDLE.png" id="3_ouywk"]

[sub_resource type="AtlasTexture" id="AtlasTexture_n7wt1"]
atlas = ExtResource("2_l641h")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_a5xh1"]
atlas = ExtResource("2_l641h")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_uqw8i"]
atlas = ExtResource("3_ouywk")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xpujt"]
atlas = ExtResource("3_ouywk")
region = Rect2(32, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_83vph"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_n7wt1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a5xh1")
}],
"loop": false,
"name": &"Death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_uqw8i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xpujt")
}],
"loop": true,
"name": &"Idle",
"speed": 3.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_x5ckt"]

[sub_resource type="CircleShape2D" id="CircleShape2D_6sblg"]

[sub_resource type="Animation" id="Animation_432g5"]
resource_name = "Death"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Death"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"separate_sprite_and_free"
}]
}

[sub_resource type="Animation" id="Animation_s1bj8"]
resource_name = "Idle"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Idle"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="Animation" id="Animation_pdoki"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Idle"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_slakc"]
_data = {
"Death": SubResource("Animation_432g5"),
"Idle": SubResource("Animation_s1bj8"),
"RESET": SubResource("Animation_pdoki")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_pb48n"]
radius = 100.0

[node name="NPC" type="CharacterBody2D" groups=["NPC"]]
collision_layer = 4
collision_mask = 0
script = ExtResource("1_thhd0")
interacted_dialogue = Array[String](["Hello there."])
repeated_dialogue = Array[String](["Aberrolas..."])

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
sprite_frames = SubResource("SpriteFrames_83vph")
animation = &"Idle"
autoplay = "Idle"
offset = Vector2(0, -16)

[node name="HealthComponent" parent="." instance=ExtResource("2_emngx")]
position = Vector2(117.179, -19.27)
max_health = 100.0
health_regeneration = 0.5

[node name="DialogueComponent" type="Node2D" parent="."]
script = ExtResource("1_gfu0n")

[node name="Label" type="Label" parent="DialogueComponent"]
z_index = 11
offset_left = -80.0
offset_top = -58.0
offset_right = 80.0
offset_bottom = -26.0
theme_override_colors/font_color = Color(1, 1, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 7
text = "test
test
test
"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3
visible_characters = 0
visible_ratio = 0.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_x5ckt")

[node name="InteractionZone" type="Area2D" parent="."]
collision_layer = 256

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractionZone"]
shape = SubResource("CircleShape2D_6sblg")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_slakc")
}
autoplay = "Idle"

[node name="AberrolaDetector" type="ShapeCast2D" parent="."]
shape = SubResource("CircleShape2D_pb48n")
target_position = Vector2(0, 0)
max_results = 1
collision_mask = 2

[connection signal="area_entered" from="InteractionZone" to="." method="_on_interaction_zone_area_entered"]
[connection signal="area_exited" from="InteractionZone" to="." method="_on_interaction_zone_area_exited"]
